# reltools

./: CLAUDE.md  DEVELOPMENT.md  README.md  demo.ipynb  demo.py  pyproject.toml
data/output/: demo_output.yaml
docs/: architecture.md
notebooks/examples/: demo.ipynb
notebooks/widgets/: custom_widgets.py
src/reltools/: __init__.py
src/reltools/converters/: __init__.py  yaml_converter.py
src/reltools/models/: __init__.py  schema.py
src/reltools/parsers/: __init__.py  ast_builder.py  sql_parser.py
src/reltools/utils/: validators.py
tests/: __init__.py  test_integration.py  test_sql_parser.py  test_validators.py  test_yaml_converter.py
tests/fixtures/: expected_output.yaml  sample_ddl.sql
